--- a/Layer/Web.config
+++ b/Layer/Web.config
@@ -6,9 +6,10 @@
 <configuration>
   <configSections>
         <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    </configSections>
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Layer-20170317013315.mdf;Initial Catalog=aspnet-Layer-20170317013315;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DBConn" connectionString="Data Source=AJ0B9F;Initial Catalog=TSQL2012;Integrated Security=False;User ID=sa;Password=8888;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
