--- a/eSaleDao/eSaleDao.csproj
+++ b/eSaleDao/eSaleDao.csproj
@@ -40,7 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CusDao.cs" />
     <Compile Include="EmpDao.cs" />
+    <Compile Include="ProductDao.cs" />
     <Compile Include="OrderDao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShipDao.cs" />
