--- a/eSalesService/eSalesService.csproj
+++ b/eSalesService/eSalesService.csproj
@@ -68,7 +68,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CusService.cs" />
     <Compile Include="EmpService.cs" />
+    <Compile Include="ProductService.cs" />
     <Compile Include="OrderService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShipService.cs" />
