Set Search Grid After Insert Order
修正在新增完訂單後, Search Grid 也會顯示剛新增的一筆訂單

--- a/Layer/Layer.csproj
+++ b/Layer/Layer.csproj
@@ -272,6 +272,7 @@
     <Content Include="Views\Order\Index.cshtml" />
     <Content Include="Views\Shared\_OrderDetail.cshtml" />
     <Content Include="Views\Order\GetUpdateDialog.cshtml" />
+    <Content Include="Views\Order\GetInsertDialog.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
