--- a/eSaleModel/eSaleModel.csproj
+++ b/eSaleModel/eSaleModel.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Order.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Store.cs" />
+    <Compile Include="ViewModel\ErrorMsg.cs" />
     <Compile Include="ViewModel\SearchOrderGrid.cs" />
     <Compile Include="ViewModel\ProductDetail.cs" />
   </ItemGroup>
