--- a/eSalesService/eSalesService.csproj
+++ b/eSalesService/eSalesService.csproj
@@ -70,6 +70,7 @@
   <ItemGroup>
     <Compile Include="CusService.cs" />
     <Compile Include="EmpService.cs" />
+    <Compile Include="Order2Service.cs" />
     <Compile Include="ProductService.cs" />
     <Compile Include="OrderService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
