Add Kendo UI Insert Dialog (./Order2/Index)
增加 Insert Function SqlTransaction 及 Insert Dialog 防呆

--- a/eSaleModel/eSaleModel.csproj
+++ b/eSaleModel/eSaleModel.csproj
@@ -41,6 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Order2\OrderDetailViewModel.cs" />
+    <Compile Include="Order2\OrderProductViewModel.cs" />
+    <Compile Include="ProductList.cs" />
     <Compile Include="Order2\Product.cs" />
     <Compile Include="Order2\OrderViewModel.cs" />
     <Compile Include="Order2\ProductViewModel.cs" />
