--- a/Layer/Layer.csproj
+++ b/Layer/Layer.csproj
@@ -258,6 +258,7 @@
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Styles\kendo.css" />
+    <Content Include="Styles\order.css" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
