--- a/Layer/Layer.csproj
+++ b/Layer/Layer.csproj
@@ -300,6 +300,7 @@
     <Content Include="Views\Order\GetUpdateDialog.cshtml" />
     <Content Include="Views\Order\GetInsertDialog.cshtml" />
     <Content Include="Views\Order2\Index.cshtml" />
+    <Content Include="Views\Order2\GetUpdateDialog.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
